--- a/doc-manager-ui/src/pages/chatbot.css
+++ b/doc-manager-ui/src/pages/chatbot.css
@@ -37,6 +37,9 @@
   
   width: calc(100% - 20px);
   box-sizing: border-box;
+
+  
+  border-radius: var(--border-radius-md); /* Rounded corners from root */
 }
 
 .chat-history {
@@ -193,7 +196,7 @@
   border: 1px solid var(--color-border); /* Border color */
   border-radius: var(--border-radius-md); /* Subtle rounding */
   cursor: pointer;
-  font-size: var(--font-size-md); /* Smaller font size for buttons */
+  font-size: var(--font-size-sm); /* Smaller font size for buttons */
   margin-top: var(--spacing-xxs); /* Spacing between buttons */
   display: block;
   max-width: 250px;
@@ -214,4 +217,8 @@
   font-size: var(--font-size-sm); /* Smaller font size for buttons */
   padding-bottom: 10px;
   
+}
+
+.PDFButton{
+  font-size: var(--font-size-sm); 
 }
